--- a/.项目文档/02_UI设计/02_原型与线框图/报告功能页面设计.md
+++ b/.项目文档/02_UI设计/02_原型与线框图/报告功能页面设计.md
@@ -288,6 +288,13 @@
 │  └───────────────────────────────────────────────────────────┘ │
 │                                                                   │
 │  ┌───────────────────────────────────────────────────────────┐ │
+│  │  达人矩阵属性分析                    [配置] 按钮           │ │
+│  │  ┌─────────────────────────────────────────────────────┐ │ │
+│  │  │  统计表格（见达人矩阵分析页面设计文档）              │ │ │
+│  │  └─────────────────────────────────────────────────────┘ │ │
+│  └───────────────────────────────────────────────────────────┘ │
+│                                                                   │
+│  ┌───────────────────────────────────────────────────────────┐ │
 │  │  筛选器区域                                                │ │
 │  │  [品牌: ▼] [博主: ▼] [日期: ───┐ ────] [刷新] [重置]    │ │
 │  └───────────────────────────────────────────────────────────┘ │
@@ -425,7 +432,29 @@
 - **数字**: Statistic 组件，颜色为次要文字色
 - **说明**: 被标记为忽略的笔记数量
 
-#### 4.2.5 筛选器区域
+#### 4.2.5 达人矩阵属性分析区域
+
+**位置**: 统计信息卡片区域下方，筛选器区域上方
+
+**布局**
+- **样式**: 参考设计规范的卡片规范
+- **标题**: "达人矩阵属性分析"（使用中标题样式，参考设计规范）
+- **操作按钮**: 右上角显示"配置"按钮（次要按钮样式）
+
+**功能说明**
+- 展示各层级达人的统计数据（达人数量、占比、平均粉丝数、总互动量、笔记数量等）
+- 支持配置自定义层级
+- 详细设计参考：`02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md`
+
+**配置存储与读取（技术说明）**
+- 配置存储位置：`qiangua_report.MatrixConfig`（JSON）。
+- 结构兼容：
+  - 直接为层级数组时，接口直接使用该数组；
+  - 或为对象且包含 `CustomLevels` 字段时，接口读取 `CustomLevels`。
+- 默认回退：当 `MatrixConfig` 缺失或为空时，接口按内置默认分层进行统计。
+- 相关接口：`app/api/reports/[id]/blogger-matrix/stats` 会读取 `MatrixConfig` 以生成统计数据。 
+
+#### 4.2.6 筛选器区域
 
 **布局**
 - **位置**: 统计信息卡片下方
@@ -463,7 +492,7 @@
   - 文字："重置"
   - 功能：清空所有筛选条件，恢复默认状态
 
-#### 4.2.6 操作栏
+#### 4.2.7 操作栏
 
 - **位置**: 筛选器区域下方
 - **布局**: 
@@ -482,13 +511,13 @@
 - **图标**: SearchOutlined
 - **功能**: 实时搜索，支持标题、品牌名称搜索
 
-#### 4.2.7 Tab 切换
+#### 4.2.8 Tab 切换
 
 - **组件**: Tabs
 - **标签**: "有效笔记"（默认激活）、"已忽略"
 - **样式**: 参考设计规范的 Tabs 组件规范
 
-#### 4.2.8 批量操作栏
+#### 4.2.9 批量操作栏
 
 - **显示条件**: 选中笔记后显示
 - **位置**: Tab 下方，表格上方
@@ -519,7 +548,7 @@
   - 文字："删除"
   - 功能：弹出确认对话框，确认后删除笔记
 
-#### 4.2.9 笔记列表表格
+#### 4.2.10 笔记列表表格
 
 **表格规格**
 - **组件**: Table
@@ -616,7 +645,7 @@
   - **已忽略tab**: 显示"恢复"按钮
 - **按钮样式**: 文字按钮（Link类型），按钮间距参考设计规范的按钮间距规范
 
-#### 4.2.10 已忽略 Tab 差异
+#### 4.2.11 已忽略 Tab 差异
 
 - **表格布局**: 与有效笔记tab一致
 - **批量操作栏**: 
@@ -626,7 +655,7 @@
   - 只显示"恢复"按钮
   - 不显示"忽略"、"删除"按钮
 
-#### 4.2.11 分页
+#### 4.2.12 分页
 
 - **组件**: Pagination
 - **位置**: 表格下方，居中显示
@@ -696,6 +725,7 @@
 - [x] 默认显示最新创建的报告
 - [x] 报告信息卡片（3个）
 - [x] 统计信息卡片（2个）
+- [x] 达人矩阵属性分析区域（统计表格、配置按钮）
 - [x] 筛选器区域（品牌、博主、日期范围、刷新、重置）
 - [x] 操作栏（追加笔记按钮 + 搜索框）
 - [x] Tab 切换（有效笔记/已忽略）
