达人分层配置：文档整理

--- a/.项目文档/01_产品定义/02_功能规格/达人矩阵属性分析功能规格.md
+++ b/.项目文档/01_产品定义/02_功能规格/达人矩阵属性分析功能规格.md
@@ -1,4 +1,17 @@
+---
+标题: 达人矩阵属性分析功能规格
+Owner: 产品（TBD）
+状态: 已批准
+Canonical: true
+Links:
+  业务规则: ../../05_核心业务逻辑/达人矩阵统计业务逻辑.md
+  UI规格: ../../02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md
+  API规格: ../../03_技术实现/05_API接口契约/API_达人矩阵分析接口.md
+  测试用例: ../../04_质量保证/02_测试用例/达人矩阵分析功能测试用例.md
+---
 # 达人矩阵属性分析功能规格
+
+> 口径以“业务规则”文档为准，本文仅描述范围、用户诉求与验收标准。
 
 ## 1. 功能概述
 
@@ -15,13 +28,14 @@
   - 层级名称
   - 粉丝数范围（min/max，max可为空表示无上限）
   - 层级之间粉丝数范围严格不重叠
+  - 范围边界规则：左闭右开区间 `[minFans, maxFans)`；当 `maxFans = null` 表示无上限，即 `Fans >= minFans`
 
 ### 2.2 统计展示
 
 展示各层级达人的以下统计指标：
 - 达人数量及占比
 - 平均粉丝数
-- 总互动量（点赞+收藏+评论+分享）及占比
+- 总互动量（点赞+收藏+评论，不含分享）及占比
 - 笔记数量及占比
 
 ### 2.3 数据来源与统计方法
@@ -60,23 +74,23 @@
 
 3. **指标计算**：
    - **达人数量**：统计该层级中不重复的达人数量（按 `BloggerId` 去重）
-   - **达人占比**：该层级达人数量 / 所有层级达人总数 × 100%
-   - **平均粉丝数**：该层级所有达人的粉丝数总和 / 该层级达人数量（使用笔记表中的 `Fans` 字段，按达人去重后计算平均值）
-   - **总互动量**：该层级所有笔记的互动量总和 = 该层级所有笔记的（LikedCount + CollectedCount + CommentsCount + ShareCount）之和
-   - **互动量占比**：该层级总互动量 / 所有层级总互动量 × 100%
-   - **笔记数量**：该层级达人的笔记总数（不去重，统计所有笔记记录）
-   - **笔记占比**：该层级笔记数量 / 所有层级笔记总数 × 100%
+   - **达人占比**：该层级达人数量 /（知名KOL层 + 所有自定义层级的达人总数）× 100%（未分层达人不计入分母）
+   - **平均粉丝数**：该层级所有达人的粉丝数总和 / 该层级达人数量（按达人去重后计算平均值）
+   - **总互动量**：该层级所有笔记的互动量总和 = （LikedCount + CollectedCount + CommentsCount）之和（不含分享）
+   - **互动量占比**：该层级总互动量 /（知名KOL层 + 所有自定义层级的总互动量）× 100%（未分层达人对应笔记的互动量不计入分母）
+   - **笔记数量**：该层级达人的笔记总数（不去重）
+   - **笔记占比**：该层级笔记数量 / 报告内笔记总数 × 100%
+   - **分享**：独立统计其数值和占比（不计入“总互动量”）
 
 4. **总计行统计**：
-   - 总计行统计的是报告中的所有有效笔记（状态为"active"的笔记），而不是表格中各层级数据的简单相加
-   - 原因：粉丝数过少的达人可能不在任何自定义层级范围内，且不是知名KOL，这些达人的笔记不会出现在表格的任何层级中
+   - 基于报告中的所有有效笔记与达人集合进行汇总；分母口径用于分层行的占比时仅包含“知名KOL”与所有自定义层级，以保证各分层占比之和为 100%
    - **总计行指标计算**：
      - **层级名称**：显示"总计"
      - **粉丝数范围**：显示报告所有有效笔记对应的不重复达人中，粉丝数的最小值和最大值，格式：`最小值 - 最大值`（例如：`0.5万 - 120万`）
      - **达人数量**：报告所有有效笔记对应的不重复达人总数（按 `BloggerId` 去重）
      - **达人占比**：100.0%
-     - **平均粉丝数**：报告所有有效笔记对应的不重复达人的平均粉丝数（按达人去重后计算平均值）
-     - **总互动量**：报告所有有效笔记的互动量总和（所有active笔记的互动量之和）
+     - **平均粉丝数**：报告所有有效笔记对应的不重复达人的平均粉丝数（按达人去重后计算）
+     - **总互动量**：报告所有有效笔记的互动量总和（点赞+收藏+评论，不含分享）
      - **互动量占比**：100.0%
      - **笔记数量**：报告所有有效笔记的总数（所有active笔记的数量）
      - **笔记占比**：100.0%
@@ -92,10 +106,10 @@
 - 支持添加、删除、编辑自定义层级
 - 配置验证：确保层级名称唯一、范围不重叠、范围连续无留空、数值合理
 - 支持重置为默认配置
-- **配置加载逻辑**：
-  - 系统默认配置：写在代码中，包含知名KOL层和默认的自定义层级（如：头部达人、腰部达人、初级达人、新手达人）
-  - 用户自定义配置：存储在数据库中，按报告ID关联
-  - 加载优先级：如果存在用户自定义配置，则使用自定义配置；如果不存在，则使用系统默认配置
+- **配置加载逻辑（与实现一致）**：
+  - 系统默认配置：代码内置（含固定“知名KOL”行与若干默认自定义层级）
+  - 用户自定义配置：存储在 `qiangua_report.CustomLevels`（JSON，按报告ID关联）
+  - 加载优先级：存在自定义配置则优先使用，否则回退默认配置
 
 ### 2.5 接口设计与计算方式
 
@@ -117,9 +131,9 @@
 
 #### 计算方式
 
-- **前端计算**：所有统计数据在前端完成计算，不依赖后端计算接口
-- **计算时机**：页面加载时、配置修改后、报告数据更新后
-- **计算逻辑**：按照"2.3 数据来源与统计方法"中定义的统计方法进行
+- **后端计算**：统计数据由服务端接口计算并返回，前端负责展示和导出
+- **计算时机**：页面加载、配置保存、有效笔记集合变化（追加/忽略/删除/恢复）
+- **计算逻辑**：遵循本节定义的统计与分层规则
 
 ## 3. 功能流程
 
