--- a/.项目文档/02_UI设计/01_简版设计规范.md
+++ b/.项目文档/02_UI设计/01_简版设计规范.md
@@ -349,3 +349,15 @@
   - 删除浏览器兼容性章节
   - 简化 antd 组件使用说明
 
+---
+
+## 15. 实现文件参考
+
+- 页面
+  - `app/dashboard/notes/page.tsx`
+  - `app/dashboard/reports/page.tsx`
+- 组件
+  - `components/reports/CreateReportModal.tsx`
+  - `components/reports/AddNotesModal.tsx`
+  - `components/reports/BloggerMatrixAnalysis.tsx`
+
