--- a/.项目文档/02_UI设计/02_原型与线框图/报告功能页面设计.md
+++ b/.项目文档/02_UI设计/02_原型与线框图/报告功能页面设计.md
@@ -439,20 +439,19 @@
 **布局**
 - **样式**: 参考设计规范的卡片规范
 - **标题**: "达人矩阵属性分析"（使用中标题样式，参考设计规范）
-- **操作按钮**: 右上角显示"配置"按钮（次要按钮样式）
+- **操作按钮**: 右上角显示"导出Excel"、"配置"按钮（均为次要按钮样式；导出包含“汇总+明细”两个sheet）
 
 **功能说明**
-- 展示各层级达人的统计数据（达人数量、占比、平均粉丝数、总互动量、笔记数量等）
+- 展示各层级达人的统计数据（达人数量、占比、平均粉丝数、总互动量（不含分享）、笔记数量、分享量/分享占比等）
 - 支持配置自定义层级
 - 详细设计参考：`02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md`
 
 **配置存储与读取（技术说明）**
-- 配置存储位置：`qiangua_report.MatrixConfig`（JSON）。
-- 结构兼容：
-  - 直接为层级数组时，接口直接使用该数组；
-  - 或为对象且包含 `CustomLevels` 字段时，接口读取 `CustomLevels`。
-- 默认回退：当 `MatrixConfig` 缺失或为空时，接口按内置默认分层进行统计。
-- 相关接口：`app/api/reports/[id]/blogger-matrix/stats` 会读取 `MatrixConfig` 以生成统计数据。 
+- 配置存储位置：`qiangua_report.CustomLevels`（JSON）。
+- 读取优先级：若存在 `CustomLevels` 则按其分层统计，否则使用默认分层。
+- 相关接口：
+  - 获取/保存配置：`app/api/reports/[id]/blogger-matrix/config/route.ts`
+  - 统计数据：`app/api/reports/[id]/blogger-matrix/stats/route.ts`
 
 #### 4.2.6 筛选器区域
 
@@ -666,6 +665,22 @@
   - 显示总数和当前范围：`第 X-Y 条，共 Z 条`
 
 ---
+
+### 4.3 实现文件链接
+
+- 页面实现
+  - `app/dashboard/reports/page.tsx`
+- 相关业务组件
+  - `components/reports/CreateReportModal.tsx`
+  - `components/reports/AddNotesModal.tsx`
+  - `components/reports/BloggerMatrixAnalysis.tsx`
+- 相关接口路由
+  - `app/api/reports/route.ts`
+  - `app/api/reports/[id]/route.ts`
+  - `app/api/reports/[id]/notes/route.ts`
+  - `app/api/reports/[id]/notes/batch-action/route.ts`
+  - `app/api/reports/calculate-notes/route.ts`
+  - `app/api/reports/[id]/calculate-new-notes/route.ts`
 
 ## 6. 交互状态说明
 
