--- a/.项目文档/02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md
+++ b/.项目文档/02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md
@@ -1,4 +1,17 @@
+---
+标题: 达人矩阵分析页面设计
+Owner: 设计（TBD）
+状态: 已批准
+Canonical: true
+Links:
+  业务规则: ../../../05_核心业务逻辑/达人矩阵统计业务逻辑.md
+  产品规格: ../../../01_产品定义/02_功能规格/达人矩阵属性分析功能规格.md
+  API规格: ../../../03_技术实现/05_API接口契约/API_达人矩阵分析接口.md
+  测试用例: ../../../04_质量保证/02_测试用例/达人矩阵分析功能测试用例.md
+---
 # 达人矩阵分析页面设计
+
+> 统计口径（区间、分母、总互动量定义）以“业务规则”为准，本文不复述规则，仅做 UI 呈现与交互说明。
 
 ## 1. 设计概述
 
@@ -60,12 +73,12 @@
 | 列名 | 宽度 | 对齐 | 说明 | 示例数据 |
 |------|------|------|------|----------|
 | **层级名称** | 150px | 左对齐 | 显示层级名称，知名KOL有特殊标识 | "知名KOL" / "头部达人" |
-| **粉丝数范围** | 150px | 左对齐 | 自定义层级显示由阈值自动生成的范围（展示为友好格式：`≥50万` 或 `10万-50万`，底层逻辑为上闭区间`(X, Y]`）；知名KOL行显示“加V达人（OfficialVerified=true）”；总计行显示“-” | "加V达人" / "≥50万" / "10万-50万" / "-" |
+| **粉丝数范围** | 150px | 左对齐 | 自定义层级显示由阈值自动生成的范围（展示为友好格式：`≥50万` 或 `10万-50万`，底层逻辑为左闭右开 `[X, Y)`，无上限时为 `X+`）；知名KOL行显示“加V达人（OfficialVerified=true）”；总计行显示“-” | "加V达人" / "≥50万" / "10万-50万" / "-" |
 | **达人数量** | 120px | 右对齐 | 该层级的达人总数 | 15 |
-| **达人占比** | 100px | 右对齐 | 占所有达人的百分比，带%符号 | 12.5% |
+| **达人占比** | 100px | 右对齐 | 占分层分母（仅KOL+所有自定义层级）的百分比，带%符号；未分层达人不计入分母（保证分层占比之和为100%） | 12.5% |
 | **平均粉丝数** | 120px | 右对齐 | 该层级达人的平均粉丝数，格式化显示 | 85.2万 |
-| **总互动量** | 120px | 右对齐 | 该层级所有笔记的互动量总和（点赞+收藏+评论+分享），格式化显示 | 125.6万 |
-| **互动量占比** | 100px | 右对齐 | 占所有互动量的百分比 | 35.8% |
+| **总互动量** | 120px | 右对齐 | 该层级所有笔记的互动量总和（点赞+收藏+评论，不含分享），格式化显示；“分享”独立统计 | 125.6万 |
+| **互动量占比** | 100px | 右对齐 | 占分层分母（仅KOL+所有自定义层级的互动量，不含分享）的百分比；未分层达人对应笔记的互动量不计入分母（保证分层占比之和为100%） | 35.8% |
 | **笔记数量** | 120px | 右对齐 | 该层级达人的笔记总数 | 234 |
 | **笔记占比** | 100px | 右对齐 | 占所有笔记的百分比 | 18.2% |
 
@@ -186,8 +199,8 @@
 - **列与控件**：
   - 顺序：只读序号
   - 层级名称：Input（可编辑）
-  - 粉丝数阈值（>）：InputNumber（仅录入阈值X，表示"> X"）
-  - 当前层范围：只读文本，自动根据“本行阈值X”和“上一行阈值Y”计算为"(X, Y]"
+  - 粉丝数阈值（minFans）：InputNumber（录入该层最小粉丝数下界）
+  - 当前层范围：只读文本，自动根据“本行 minFans = X”和“下一行 minFans = Y 或无下一行”计算为"[X, Y)"；当无下一行时显示为"[X, +∞)"
   - 操作：删除（危险样式）
 - **交互**：
   - 内联编辑，实时计算“当前层范围”
@@ -206,14 +219,14 @@
 - **自动范围**：“当前层范围”只读，由系统根据阈值自动计算与展示
 - **占位符**：
   - 层级名称："请输入层级名称"
-  - 粉丝数阈值："仅输入数字，表示 >X"
+  - 粉丝数阈值："仅输入数字，表示该层最小粉丝数 minFans"
 - **保存**：点击"保存"进行整体保存（非逐行保存）
 - **取消**：关闭弹窗即取消本次修改；若有未保存修改则二次确认
 
 #### 4.3.5 删除层级
 
 - **按钮**：删除按钮（危险按钮样式）
-- **确认**：无二次确认
+- **确认**：无二次确认（点击即删除）
 - **范围联动**：删除中间行后，后续行阈值保持不变，所有“当前层范围”自动重算并自然衔接
 - **限制**：至少保留一个自定义层级（删除按钮在只剩一个层级时禁用或隐藏）
 
@@ -241,12 +254,12 @@
 
 - **层级名称为空**：提示"层级名称不能为空"
 - **层级名称重复**：提示"层级名称已存在，请使用其他名称"
-- **阈值严格递减**：从上到下必须满足 本行X < 上一行阈值Y；相等或大于将标红并提供“一键修正”为 Y-1
-- **边界归属**：采用上闭区间，上界值归属上一层
-- **阈值下限**：最后一行建议 >0；允许设置任意非负整数
-- **删除影响**：删除任一行后，后续行阈值不改动，仅自动重算范围
-- **范围展示**：范围为"(当前行X, 上一行阈值Y]"；知名KOL固定为"[1,000,000, +∞)"
-- **人群范围**：分层仅作用于“非加V达人（OfficialVerified=false）”；知名KOL集合不参与阈值校验与范围计算
+- **最小值递增**：按显示顺序需满足 当前行 `minFans = X` < 下一行 `minFans = Y`；否则标红并给出提示（应小于下一行）
+- **边界规则**：采用左闭右开区间，[X, Y)；当最后一行无上界时为 [X, +∞)
+- **阈值下限**：第一行建议从 0 开始；允许设置任意非负整数
+- **删除影响**：删除任一行后，其它行 `minFans` 不改动，所有“当前层范围”自动重算并自然衔接
+- **范围展示**：范围为"[当前行 X, 下一行 Y)"；无下一行时显示"[X, +∞)"；知名KOL固定为“加V达人（OfficialVerified=true）”
+- **人群范围**：分层仅作用于“非加V达人（OfficialVerified=false）”；知名KOL集合先行抽取，不参与粉丝区间计算
 
 ### 4.5 输入框规格
 
@@ -354,4 +367,16 @@
 3. **排序功能**：支持按任意数字列排序
 4. **筛选功能**：支持按层级筛选笔记列表
 5. **对比分析**：支持对比不同报告的达人矩阵数据
+
+---
+
+## 10. 实现文件链接
+
+- 组件实现
+  - `components/reports/BloggerMatrixAnalysis.tsx`
+- 相关页面
+  - `app/dashboard/reports/page.tsx`
+- 相关接口路由
+  - `app/api/reports/[id]/blogger-matrix/config/route.ts`
+  - `app/api/reports/[id]/blogger-matrix/stats/route.ts`
 
