--- a/.项目文档/03_技术实现/03_数据库设计/报告功能表设计.md
+++ b/.项目文档/03_技术实现/03_数据库设计/报告功能表设计.md
@@ -22,6 +22,7 @@
 | UserId | UUID | 用户ID（外键，关联 auth.users） | NOT NULL, REFERENCES auth.users(id) | INDEX |
 | ReportName | VARCHAR(200) | 报告名称 | NOT NULL | INDEX |
 | Status | VARCHAR(20) | 报告状态 | NOT NULL, DEFAULT 'active' | INDEX |
+| CustomLevels | JSONB | 达人矩阵自定义层级配置（报告维度） | NULL |  |
 | CreatedAt | TIMESTAMPTZ | 创建时间（带时区） | NOT NULL, DEFAULT NOW() | INDEX |
 | UpdatedAt | TIMESTAMPTZ | 更新时间（自动更新，带时区） | DEFAULT NOW() | |
 
@@ -32,6 +33,12 @@
 
 **注意**: 删除操作是逻辑删除，通过更新 `Status` 字段为 `'hide'` 实现，不会物理删除记录。
 **重要**: 使用 `'hide'` 而不是 `'delete'`，避免SQL保留关键字冲突。
+
+#### 配置存储说明
+
+- 自定义层级配置字段：`qiangua_report.CustomLevels`（JSONB）
+- 读取优先级：统计接口优先读取 `CustomLevels`；为空则使用系统默认配置
+- 保存逻辑：配置接口更新 `CustomLevels`；重置时置为 `NULL`
 
 #### 索引设计
 
@@ -147,6 +154,7 @@ CREATE TABLE IF NOT EXISTS qiangua_report (
     "UserId" UUID NOT NULL REFERENCES auth.users(id) ON DELETE CASCADE,
     "ReportName" VARCHAR(200) NOT NULL,
     "Status" VARCHAR(20) NOT NULL DEFAULT 'active',
+    "CustomLevels" JSONB NULL,
     "CreatedAt" TIMESTAMPTZ NOT NULL DEFAULT NOW(),
     "UpdatedAt" TIMESTAMPTZ DEFAULT NOW()
 );
