--- a/.项目文档/03_技术实现/04_前端组件/报告功能组件.md
+++ b/.项目文档/03_技术实现/04_前端组件/报告功能组件.md
@@ -179,6 +179,9 @@ const [activeTab, setActiveTab] = useState<'active' | 'ignored'>('active');
    - 批量忽略（有效笔记tab）
    - 批量删除（有效笔记tab）
    - 批量恢复（已忽略tab）
+5. **达人矩阵**:
+   - 操作按钮："导出Excel"、"配置"
+   - 导出包含两个sheet：汇总（按页面列顺序）与明细（参与统计的笔记全集）
 
 ---
 
