--- a/.项目文档/03_技术实现/05_API接口契约/数据字段映射表.md
+++ b/.项目文档/03_技术实现/05_API接口契约/数据字段映射表.md
@@ -34,6 +34,10 @@
 | LikeCollect | INTEGER | getNoteList | LikeCollect | 点赞+收藏总数 | ItemList[].LikeCollect |
 | Lcc | INTEGER | getNoteList | Lcc | LCC值 | ItemList[].Lcc |
 
+> 统计口径说明（达人矩阵）：
+> - “总互动量”定义为 LikedCount + CollectedCount + CommentsCount（不含 ShareCount）
+> - ShareCount 单独统计为“分享量”及其占比，且不计入“总互动量”
+
 ### 评分数据字段
 
 | 数据库字段 | 数据库类型 | API接口 | API字段 | 说明 | 数据来源 |
