--- a/.项目文档/03_技术实现/06_代码结构.md
+++ b/.项目文档/03_技术实现/06_代码结构.md
@@ -10,7 +10,7 @@
 │   ├── (auth)/                  # 认证路由组
 │   │   └── login/
 │   │       └── page.tsx         # 登录/注册页面（Tab切换）
-│   └── (dashboard)/             # 主应用路由组（需要认证）
+│   └── dashboard/               # 主应用路由（需要认证）
 │       ├── layout.tsx           # 主应用布局（顶部导航+侧边栏）
 │       ├── page.tsx             # 首页/仪表盘
 │       ├── notes/               # 笔记管理模块
@@ -21,7 +21,7 @@
 │       │   ├── page.tsx         # 品牌列表
 │       │   └── add/
 │       │       └── page.tsx     # 添加品牌
-│       ├── reports/              # 分析报告模块
+│       ├── reports/             # 分析报告模块
 │       │   ├── page.tsx         # 数据概览
 │       │   └── trends/
 │       │       └── page.tsx     # 趋势分析
@@ -37,9 +37,9 @@
 ├── lib/                         # 工具函数和配置目录
 │   ├── supabase/
 │   │   ├── client.ts            # 客户端Supabase客户端
-│   │   └── server.ts             # 服务端Supabase客户端
+│   │   └── server.ts            # 服务端Supabase客户端
 │   ├── utils/
-│   │   └── menuConfig.tsx        # 菜单配置和工具函数
+│   │   └── menuConfig.tsx       # 菜单配置和工具函数
 │   └── types/
 │       └── index.ts              # 全局类型定义
 │
@@ -49,6 +49,42 @@
 ├── next.config.js                # Next.js配置
 └── .项目文档/                    # 项目文档目录
 ```
+
+## API 路由（关键）
+
+```
+app/api/
+  bloggers/route.ts
+  brands/route.ts
+  notes/route.ts
+  notes/stats/route.ts
+  data/init-test-data/route.ts
+  reports/route.ts
+  reports/calculate-notes/route.ts
+  reports/[id]/route.ts
+  reports/[id]/add-notes/route.ts
+  reports/[id]/calculate-new-notes/route.ts
+  reports/[id]/notes/route.ts
+  reports/[id]/notes/batch-action/route.ts
+  reports/[id]/blogger-matrix/config/route.ts
+  reports/[id]/blogger-matrix/stats/route.ts
+```
+
+## 业务组件（关键）
+
+```
+components/reports/
+  CreateReportModal.tsx
+  AddNotesModal.tsx
+  BloggerMatrixAnalysis.tsx
+  BloggerMatrixConfigModal.tsx
+```
+
+## 对齐说明（与实现一致性核对）
+- 主应用目录为 `app/dashboard/*`（不含路由组括号），文档已修正。
+- 达人矩阵配置存储字段为 `qiangua_report.CustomLevels`，统计接口按该配置或默认分层计算。
+- 达人矩阵“总互动量”= 点赞 + 收藏 + 评论（不含分享）；分享独立统计并展示。
+- 达人矩阵组件提供“配置”“导出Excel”两个操作按钮。
 
 ## 关键文件说明
 
