--- a/.项目文档/04_测试文档/报告功能测试用例.md
+++ b/.项目文档/04_测试文档/报告功能测试用例.md
@@ -1,3 +1,11 @@
+---
+标题: 报告功能测试用例（已废弃）
+状态: 已废弃
+Deprecated: true
+替代文档:
+  - 质量保证_达人矩阵测试用例: ../04_质量保证/02_测试用例/达人矩阵分析功能测试用例.md
+说明: 本文为早期报告功能通用测试用例，涉及达人矩阵部分已被更细化的质量保证文档替代。请优先以“质量保证/测试用例”目录中的文档为准。
+---
 # 报告功能测试用例
 
 ## 1. API接口测试用例
@@ -405,6 +413,37 @@
 - 排序功能正常
 - 分页功能正常
 - 操作按钮功能正常
+
+---
+
+### TC-FE-REPORT-012: 报告详情页 - 导出Excel
+
+**描述**: 验证达人矩阵导出Excel功能  
+**测试步骤**:
+1. 进入报告详情页，确保达人矩阵统计已加载
+2. 点击“导出Excel”按钮
+3. 打开下载的文件
+
+**预期结果**: 
+- 成功下载Excel文件
+- 文件包含“汇总”与“明细”两张表
+- 汇总表字段包含：层级名称、粉丝区间、达人数量、达人占比、平均粉丝数、总互动量、互动量占比、分享量、分享占比、笔记数量、笔记占比、总计行
+- 明细表用于复核导出数据，与页面筛选条件一致
+
+---
+
+### TC-FE-REPORT-013: 报告详情页 - 矩阵统计由后端计算
+
+**描述**: 验证达人矩阵统计由后端接口返回，前端不做重复计算  
+**测试步骤**:
+1. 打开报告详情页，触发加载达人矩阵统计
+2. 观察网络请求（或在测试环境拦截/记录）
+3. 对比页面展示数据与接口 `GET /api/reports/[id]/blogger-matrix/stats` 返回
+
+**预期结果**: 
+- 页面发起统计接口请求
+- 页面展示的统计数据与接口返回一致（口径：总互动量=点赞+收藏+评论，不含分享）
+- 分享量与分享占比独立显示
 
 ---
 
