--- a/.项目文档/04_质量保证/02_测试用例/达人矩阵分析功能测试用例.md
+++ b/.项目文档/04_质量保证/02_测试用例/达人矩阵分析功能测试用例.md
@@ -1,4 +1,17 @@
+---
+标题: 达人矩阵分析功能测试用例
+Owner: 测试（TBD）
+状态: 已批准
+Canonical: true
+Links:
+  业务规则: ../../../05_核心业务逻辑/达人矩阵统计业务逻辑.md
+  产品规格: ../../../01_产品定义/02_功能规格/达人矩阵属性分析功能规格.md
+  UI规格: ../../../02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md
+  API规格: ../../../03_技术实现/05_API接口契约/API_达人矩阵分析接口.md
+---
 # 达人矩阵分析功能测试用例
+
+> 统计口径以“业务规则”为准；本用例不重复定义算法，仅校验与口径一致的结果与交互。
 
 ## 概述
 
@@ -110,8 +123,8 @@
 2. 确认删除
 
 **预期结果**：
-- 弹出确认提示
-- 确认后层级被删除
+- 点击即删除（无二次确认）
+- 删除后其它行 `minFans` 不变，区间自动重算并自然衔接
 - 如果只剩1个自定义层级，删除按钮禁用
 
 ---
@@ -156,6 +169,27 @@
 
 ---
 
+### 1.8 导出Excel
+
+**测试用例 TC-BM-028**
+
+**前置条件**：
+- 用户已登录
+- 存在至少一个报告且已加载统计数据
+
+**测试步骤**：
+1. 点击“导出Excel”按钮
+2. 下载完成后打开文件
+
+**预期结果**：
+- 导出成功，无错误提示
+- Excel 包含“汇总”与“明细”两张表
+- 汇总表包含：层级名称、粉丝区间、达人数量、达人占比、平均粉丝数、总互动量、互动量占比、分享量、分享占比、笔记数量、笔记占比、总计行
+- 明细表包含：用于复核的明细数据（含层级匹配结果）
+- 数字格式与页面显示一致（千分位/百分比）
+
+---
+
 ## 2. 数据统计测试
 
 ### 2.1 达人数量统计
@@ -192,8 +226,8 @@
 2. 检查各层级的达人占比
 
 **预期结果**：
-- 达人占比正确计算（该层级达人数量 / 所有层级达人总数 × 100%）
-- 所有层级的达人占比之和 ≤ 100%（因为可能有未匹配的达人）
+- 达人占比正确计算（该层级达人数量 / 分层分母达人总数 × 100%），其中分层分母仅包含“知名KOL + 所有自定义层级”的不重复达人总数，未分层达人不计入分母
+- 所有分层行的达人占比之和 = 100%
 - 总计行的达人占比为100.0%
 
 ---
@@ -231,8 +265,8 @@
 2. 检查各层级的总互动量
 
 **预期结果**：
-- 总互动量正确计算（该层级所有笔记的互动量总和）
-- 互动量 = 点赞数 + 收藏数 + 评论数 + 分享数
+- 总互动量正确计算（该层级所有笔记的互动量总和，不含分享）
+- 互动量 = 点赞数 + 收藏数 + 评论数
 - 不去重，统计所有笔记记录
 
 ---
@@ -251,8 +285,8 @@
 2. 检查各层级的互动量占比
 
 **预期结果**：
-- 互动量占比正确计算（该层级总互动量 / 所有层级总互动量 × 100%）
-- 所有层级的互动量占比之和 = 100%
+- 互动量占比正确计算（该层级总互动量 / 分层分母总互动量 × 100%），其中分层分母仅包含“知名KOL + 所有自定义层级”的互动量（不含分享），未分层达人对应笔记的互动量不计入分母
+- 所有分层行的互动量占比之和 = 100%
 - 总计行的互动量占比为100.0%
 
 ---
@@ -314,6 +348,26 @@
 - 粉丝数范围显示报告所有有效笔记对应的不重复达人中，粉丝数的最小值和最大值
 - 达人数量、总互动量、笔记数量正确统计
 - 所有占比列显示100.0%
+
+---
+
+### 2.9 分享量与分享占比统计
+
+**测试用例 TC-BM-029**
+
+**前置条件**：
+- 用户已登录
+- 存在至少一个报告
+- 报告中有多条笔记
+
+**测试步骤**：
+1. 查看达人矩阵统计表格
+2. 检查各层级的分享量与分享占比
+
+**预期结果**：
+- 分享量为该层级所有笔记的分享数之和
+- 分享占比 = 该层级分享量 / 报告所有有效笔记分享量之和 × 100%
+- 总计行的分享占比为100.0%
 
 ---
 
