--- a/.项目文档/05_核心业务逻辑/达人矩阵统计业务逻辑.md
+++ b/.项目文档/05_核心业务逻辑/达人矩阵统计业务逻辑.md
@@ -1,4 +1,19 @@
+---
+标题: 达人矩阵统计业务逻辑
+Owner: 后端/数据（TBD）
+状态: 已批准
+Canonical: true
+Supersedes:
+  - 旧版：达人矩阵属性分析功能设计文档.md（已删除）
+Links:
+  产品规格: ../../01_产品定义/02_功能规格/达人矩阵属性分析功能规格.md
+  UI规格: ../../02_UI设计/02_原型与线框图/达人矩阵分析页面设计.md
+  API规格: ../../03_技术实现/05_API接口契约/API_达人矩阵分析接口.md
+  测试用例: ../../04_质量保证/02_测试用例/达人矩阵分析功能测试用例.md
+---
 # 达人矩阵统计业务逻辑
+
+> 本文为口径唯一来源（Single Source of Truth）：区间边界、占比分母、总互动量与分享定义、总计行规则等仅在此维护。
 
 ## 概述
 
@@ -131,19 +146,21 @@ const bloggerCount = new Set(
 
 **计算公式**：
 ```
-达人占比 = (该层级达人数量 / 所有层级达人总数) × 100%
+达人占比 = (该层级达人数量 / 分层分母达人总数) × 100%
 ```
 
-**所有层级达人总数**：
-- 统计报告所有有效笔记对应的不重复达人总数（按 `BloggerId` 去重）
-- 包含所有层级的达人，以及未匹配到任何层级的达人
+**分层分母达人总数**：
+- 统计被计入“知名KOL层 + 所有自定义层级”的不重复达人总数（按 `BloggerId` 去重）
+- 不包含未匹配到任何层级的达人（保证各分层达人占比之和为 100%）
 
 **实现逻辑**：
 ```typescript
 // 伪代码
-const totalBloggers = new Set(
-  notes.map(note => note.BloggerId)
-).size;
+const bloggersInLevels = new Set<string>();
+levels.forEach(level => {
+  level.bloggers.forEach(b => bloggersInLevels.add(b.BloggerId));
+});
+const totalBloggers = bloggersInLevels.size;
 
 const bloggerPercentage = (levelBloggerCount / totalBloggers) * 100;
 ```
@@ -168,42 +185,59 @@ const totalFans = Array.from(uniqueBloggers.values()).reduce((sum, fans) => sum 
 const avgFans = totalFans / uniqueBloggers.size;
 ```
 
-### 3.4 总互动量计算
+### 3.4 总互动量计算（不含分享）
 
 **计算方式**：
-- 该层级所有笔记的互动量总和
-- 互动量 = 点赞数 + 收藏数 + 评论数 + 分享数
+- 该层级所有笔记的互动量总和（不含分享）
+- 互动量 = 点赞数 + 收藏数 + 评论数
 - 不去重，统计所有笔记记录（因为同一达人的多条笔记都应计入）
 
 **实现逻辑**：
 ```typescript
 // 伪代码
 const totalInteraction = levelNotes.reduce((sum, note) => {
-  return sum + note.LikedCount + note.CollectedCount + note.CommentsCount + note.ShareCount;
+  return sum + note.LikedCount + note.CollectedCount + note.CommentsCount;
 }, 0);
 ```
 
-### 3.5 互动量占比计算
+### 3.5 互动量占比计算（不含分享）
 
 **计算公式**：
 ```
-互动量占比 = (该层级总互动量 / 所有层级总互动量) × 100%
+互动量占比 = (该层级总互动量 / 分层分母总互动量) × 100%
 ```
 
-**所有层级总互动量**：
-- 报告所有有效笔记的互动量总和（所有active笔记的互动量之和）
+**分层分母总互动量**：
+- 仅统计“知名KOL层 + 所有自定义层级”覆盖到的达人对应笔记的互动量之和（不含分享）
+- 未分层达人的笔记互动量不计入分母（保证各分层互动占比之和为 100%）
 
 **实现逻辑**：
 ```typescript
 // 伪代码
-const totalInteraction = notes.reduce((sum, note) => {
-  return sum + note.LikedCount + note.CollectedCount + note.CommentsCount + note.ShareCount;
-}, 0);
+const bloggerIdsInLevels = new Set<string>();
+levels.forEach(level => level.bloggers.forEach(b => bloggerIdsInLevels.add(b.BloggerId)));
+const totalInteraction = notes
+  .filter(note => bloggerIdsInLevels.has(note.BloggerId))
+  .reduce((sum, note) => sum + note.LikedCount + note.CollectedCount + note.CommentsCount, 0);
 
 const interactionPercentage = (levelInteraction / totalInteraction) * 100;
 ```
 
-### 3.6 笔记数量计算
+### 3.6 分享量与分享占比（单列统计）
+
+**说明**：
+- 分享量不计入“总互动量”，单独作为一列展示与统计占比
+- 分享占比计算基准为“报告所有有效笔记的分享量之和”
+
+**实现逻辑**：
+```typescript
+// 伪代码
+const levelShare = levelNotes.reduce((sum, note) => sum + note.ShareCount, 0);
+const totalShare = notes.reduce((sum, note) => sum + note.ShareCount, 0);
+const sharePercentage = totalShare === 0 ? 0 : (levelShare / totalShare) * 100;
+```
+
+### 3.7 笔记数量计算
 
 **计算方式**：
 - 该层级达人的笔记总数
@@ -215,7 +249,7 @@ const interactionPercentage = (levelInteraction / totalInteraction) * 100;
 const noteCount = levelNotes.length;
 ```
 
-### 3.7 笔记占比计算
+### 3.8 笔记占比计算
 
 **计算公式**：
 ```
@@ -280,7 +314,7 @@ const fansRange = `${formatFans(minFans)} - ${formatFans(maxFans)}`;
 - 报告所有有效笔记对应的不重复达人的平均粉丝数（按达人去重后计算平均值）
 
 #### 4.2.6 总互动量
-- 报告所有有效笔记的互动量总和（所有active笔记的互动量之和）
+- 报告所有有效笔记的互动量总和（点赞+收藏+评论，不含分享）
 
 #### 4.2.7 互动量占比
 - 100.0%（固定值）
@@ -290,6 +324,10 @@ const fansRange = `${formatFans(minFans)} - ${formatFans(maxFans)}`;
 
 #### 4.2.9 笔记占比
 - 100.0%（固定值）
+
+#### 4.2.10 分享量与分享占比
+- 分享量：报告所有有效笔记的分享量之和
+- 分享占比：100.0%（固定值）
 
 ---
 
@@ -496,21 +534,15 @@ const DEFAULT_CONFIG = {
 
 ## 8. 性能优化
 
-### 8.1 前端计算优化
+### 8.1 计算职责划分
 
-1. **数据缓存**：
-   - 笔记数据缓存，避免重复请求
-   - 配置数据缓存，避免重复加载
+1. **后端计算**：
+   - 达人矩阵所有统计（分层、达人数、平均粉丝、总互动量、占比、笔记数、分享等）由后端接口统一计算并返回
+   - 前端仅负责展示与导出 Excel，不在前端重复计算
+2. **缓存策略**：
+   - 配置与统计结果可按报告维度做短期缓存，降低重复计算压力
 
-2. **计算优化**：
-   - 使用 Map 和 Set 数据结构提高查找效率
-   - 批量处理，避免多次遍历
-
-3. **Web Worker**：
-   - 如果笔记数量很大（>5000条），考虑使用 Web Worker 进行计算
-   - 避免阻塞主线程
-
-### 8.2 后端查询优化
+### 8.2 后端查询与计算优化
 
 1. **索引优化**：
    - `qiangua_report_note_rel` 表的 `(ReportId, Status)` 复合索引
@@ -519,6 +551,9 @@ const DEFAULT_CONFIG = {
 2. **查询优化**：
    - 只查询必要的字段
    - 使用 JOIN 而不是多次查询
+3. **计算优化**：
+   - 使用聚合函数和分组减少内存搬运
+   - 分层匹配在 SQL/内存中采用一次遍历完成优先级匹配（KOL → 自定义层）
 
 ---
 
